--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -101,7 +101,7 @@
 		
 		
 		# (1st Plot) Also it is possible to draw a histogram based on a single variable. It shows us a general overview about the distribution of the variable values. Notice that first we have used the 'plot' function and then passed the 'hist' function in it. I assume you can use the 'hist' funciion standalone by itself but it is better to have consistency in our code. Think about it this way: I want to plot something and then I pass a rule to show how I want my plot to be drawn (that rule can be hist or density or somethingelse)
-		with(marketingData, plot(hist(Salary)))
+		with(marketingData, hist(Salary))
 		
 		
 		# Imagine that we only need the mean and standard deviation for a single variable in a dataset. R will allow us to get it fast and easy :).
@@ -120,7 +120,7 @@
 		
 		# (Plot 3) Lets see what happens when we bring a histogram and a density plot together. Magic Happens :)
 		par(mfrow = c(1,2))
-		with(marketingData, plot(hist(Salary, probability= TRUE, col='grey75')))
+		with(marketingData, hist(Salary, probability= TRUE, col='grey75'))
 		with(marketingData, lines(density(Salary), col='red'))
 		
 		
