--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -100,7 +100,7 @@
 		with(marketingData, summary(Salary))
 		
 		
-		# (1st Plot) Also it is possible to draw a histogram based on a single variable. It shows us a general overview about the distribution of the variable values. Notice that first we have used the 'plot' function and then passed the 'hist' function in it. I assume you can use the 'hist' funciion standalone by itself but it is better to have consistency in our code. Think about it this way: I want to plot something and then I pass a rule to show how I want my plot to be drawn (that rule can be hist or density or somethingelse)
+		# (1st Plot) Also it is possible to draw a histogram based on a single variable. It shows us a general overview about the distribution of the variable values.
 		with(marketingData, hist(Salary))
 		
 		
