--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -148,6 +148,8 @@
 	<h5 id="welcome-to-github-pages">Advanced Stuff</h5>   
 	    
       <p style='font-size: 14px'>
+				<b>Histogram Function, Value Transformer Function</b>
+				
 				Lets explore some advanced stuff. In R we have the ability to create our functions which makes
 				life easier on so many levels. We define a function once and we can use it many times during 
 				our program. If you think about it, all of the other stuff we are using in R are already functions.
