--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 <a href="3rd-lecture.html" title="erd Lecture">3rd Lecture</a>
 	    
 <h3>Labs</h3>	
-<a href="3rd-lab.html" title="1st Lecture">3rd Lab</a>
+<a href="1st-lab.html" title="1st Lab">1st Lab</a>
+<br />
+<a href="3rd-lab.html" title="3rd Lab">3rd Lab</a>
 
 <footer class="site-footer">
 	<span id='footer-author'>
