--- a/index.html
+++ b/index.html
@@ -1,52 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en-US">
-	
-<head>	
-<title>BI Data Analytics</title>
-
-<meta charset="UTF-8">
-<meta name="description" content="BI Data Analytics"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#157878">
-	
-<script src="https://cdn.datacamp.com/datacamp-light-latest.min.js"></script>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/aaa/assets/css/style.css?v=de65868e5d6a8010907d8f0aa653e21466b700a1">
-<link rel="stylesheet" href="/style.css">
-</head>
-	
-<body>
-
-<section class="page-header">
-	<h1 class="project-name">BI Data Analytics</h1>
-	<h2 class="project-tagline"></h2>
-	<a href="https://github.com/kasrakhosravi/bi-data-analytics" class="btn">View on GitHub</a>
-</section>
-
-<section class="main-content">
-	
-<h4 id="welcome-to-github-pages">Lets Have Some Fun With Data</h4>  		
-<img src='https://i0.wp.com/techtohuman.s3.amazonaws.com/images/mother_of_data.jpg' />
-	    
-<h3>Lectures</h3>
-<a href="1st-lecture.html" title="1st Lecture">1st Lecture</a> 
-<br />
-<a href="2nd-lecture.html" title="2nd Lecture">2nd Lecture</a>
-<br />
-<a href="3rd-lecture.html" title="erd Lecture">3rd Lecture</a>
-	    
-<h3>Labs</h3>	
-<a href="1st-lab.html" title="1st Lab">1st Lab</a>
-<br />
-<a href="3rd-lab.html" title="3rd Lab">3rd Lab</a>
-
-<footer class="site-footer">
-	<span id='footer-author'>
-		Made with <i style='color: red' class="fa fa-heart pulse"></i> By <a href='https://github.com/kasrakhosravi'>Kasra</a>
-	</span>
-	<br />
-	<span id='footer-author'><!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 
@@ -116,7 +68,7 @@
                 </p>
             </div>
             <div class="col-sm-6 main-asset">
-                <img class="ravaj-theme-preview" src="images/theme-preview.png" />
+                <img class="ravaj-theme-preview" src="theme-preview.png" />
             </div>
         </div>
 
@@ -137,15 +89,3 @@
 
 </body>
 </html>
-	Course Instructor: Associate Professor <a href='https://www.bi.no/om-bi/ansatte/institutt-for-samfunnsokonomi/gudmund-hermansen/'>Gudmund Hermansen</a>
-	</span>
-	<br />
-	<span id='footer-author'>
-	This is a student project maintained by a student and is not associated with BI Norwegian Business School
-	</span>
-</footer>
-	
-</section>
-</body>
-</html>
-
