--- a/1st-lecture.html
+++ b/1st-lecture.html
@@ -30,6 +30,9 @@
         <div class="container">
             <ul class="nav navbar-nav">
                 <li>
+                    <a href="https://kasrakhosravi.github.io/bi-data-analytics">Home</a>
+                </li>
+                <li>
                     <a href="#">Lectures</a>
                 </li>
                 <li>
