--- a/index.html
+++ b/index.html
@@ -27,20 +27,23 @@
     <div class="header">
 
         <nav class="navbar">
-            <div class="container">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">Lectures</a>
-                    </li>
-                    <li>
-                        <a href="#">Labs</a>
-                    </li>
-                    <li>
-                        <a href="#">Groups</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="https://kasrakhosravi.github.io/bi-data-analytics">Home</a>
+                </li>
+                <li>
+                    <a href="#">Lectures</a>
+                </li>
+                <li>
+                    <a href="#">Labs</a>
+                </li>
+                <li>
+                    <a href="#">Groups</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
         <div class="container">
             <div class="intro">
