--- a/lectures.html
+++ b/lectures.html
@@ -1,1 +1,92 @@
+<!doctype html>
+<html lang="en">
+<head>
 
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Business Data Analytics"/>
+
+    <title>Business Data Analytics</title>
+
+    <link rel="canonical" href="http://www.ravaj.ir/">
+    <link rel="icon" href="images/favicons/favicon.ico" type="image/x-icon">
+
+    <script src="https://cdn.datacamp.com/datacamp-light-latest.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/aaa/assets/css/style.css?v=de65868e5d6a8010907d8f0aa653e21466b700a1">
+    <link rel="stylesheet" href="/style.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet"/>
+    <link href="css/ravaj.css" rel="stylesheet"/>
+
+</head>
+<body class="index">
+
+<div class="header">
+
+    <nav class="navbar">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="https://kasrakhosravi.github.io/bi-data-analytics">Home</a>
+                </li>
+                <li>
+                    <a href="#">Lectures</a>
+                </li>
+                <li>
+                    <a href="#">Labs</a>
+                </li>
+                <li>
+                    <a href="#">Groups</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="intro">
+            <h1 class="intro-text">Business Data Analytics</h1>
+            <a class="marketing-button intro-call-to-action"
+               href="https://github.com/kasrakhosravi/bi-data-analytics">
+                Github Source
+            </a>
+        </div>
+    </div>
+
+</div>
+
+<div class="main">
+
+    <div class="container">
+      <section class="main-content">
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-action active">
+            Cras justo odio
+          </a>
+          <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+          <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+          <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+          <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+        </div>
+      </section>
+    </div>
+
+</div>
+			
+<br />
+
+<footer class="footer">
+	<span id='footer-author'>
+		Made with <i style='color: red' class="fa fa-heart pulse"></i> By <a href='https://www.linkedin.com/in/kasrakhosravi/'>Kasra</a> (Student Maintained Project)
+	</span>
+    <br />
+    <span id='footer-author'>
+	    Course Instructor: Associate Professor <a href='https://www.bi.no/om-bi/ansatte/institutt-for-samfunnsokonomi/gudmund-hermansen/'>Gudmund Hermansen</a>
+	</span>
+    <br />
+</footer>
+
+</body>
+</html>
