--- a/lectures.html
+++ b/lectures.html
@@ -62,8 +62,8 @@
     <div class="container">
       <section class="main-content">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action active">
-            Cras justo odio
+          <a href="lecture-1.html" class="list-group-item list-group-item-action active">
+		1st Lecture
           </a>
           <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
           <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
