--- a/lectures.html
+++ b/lectures.html
@@ -62,13 +62,32 @@
     <div class="container">
       <section class="main-content">
         <div class="list-group">
-          <a href="lecture-1.html" class="list-group-item list-group-item-action active">
+		
+          <a href="1st-lecture.html" class="list-group-item list-group-item-action active">
 		1st Lecture
           </a>
-          <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-          <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-          <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-          <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+	  <a href="2nd-lecture.html" class="list-group-item list-group-item-action active">
+		2nd Lecture
+          </a>
+	  <a href="3rd-lecture.html" class="list-group-item list-group-item-action active">
+		3rd Lecture
+          </a>
+	  <a href="4th-lecture.html" class="list-group-item list-group-item-action active">
+		4th Lecture
+          </a>
+	  <a href="5th-lecture.html" class="list-group-item list-group-item-action active">
+		5th Lecture
+          </a>
+	  <a href="6th-lecture.html" class="list-group-item list-group-item-action active">
+		6th Lecture
+          </a>
+	  <a href="7th-lecture.html" class="list-group-item list-group-item-action active">
+		7th Lecture
+          </a>
+	  <a href="8th-lecture.html" class="list-group-item list-group-item-action active">
+		8th Lecture
+          </a>
+		
         </div>
       </section>
     </div>
