--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <a href="https://kasrakhosravi.github.io/bi-data-analytics">Home</a>
                 </li>
                 <li>
-                    <a href="#">Lectures</a>
+                    <a href="lectures.html">Lectures</a>
                 </li>
                 <li>
-                    <a href="#">Labs</a>
+                    <a href="labs.html">Labs</a>
                 </li>
                 <li>
-                    <a href="#">Groups</a>
+                    <a href="groups.html">Groups</a>
                 </li>
             </ul>
         </div>
