--- a/lectures/lectures.html
+++ b/lectures/lectures.html
@@ -63,28 +63,28 @@
       <section class="main-content">
         <div class="list-group">
 		
-          <a href="1st-lecture.html" class="list-group-item list-group-item-action">
+          <a href="lectures/1st-lecture.html" class="list-group-item list-group-item-action">
 		1st Lecture
           </a>
-	  <a href="2nd-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/2nd-lecture.html" class="list-group-item list-group-item-action">
 		2nd Lecture
           </a>
-	  <a href="3rd-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/3rd-lecture.html" class="list-group-item list-group-item-action">
 		3rd Lecture
           </a>
-	  <a href="4th-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/4th-lecture.html" class="list-group-item list-group-item-action">
 		4th Lecture
           </a>
-	  <a href="5th-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/5th-lecture.html" class="list-group-item list-group-item-action">
 		5th Lecture
           </a>
-	  <a href="6th-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/6th-lecture.html" class="list-group-item list-group-item-action">
 		6th Lecture
           </a>
-	  <a href="7th-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/7th-lecture.html" class="list-group-item list-group-item-action">
 		7th Lecture
           </a>
-	  <a href="8th-lecture.html" class="list-group-item list-group-item-action">
+	  <a href="lectures/8th-lecture.html" class="list-group-item list-group-item-action">
 		8th Lecture
           </a>
 		
