--- a/lectures/lectures.html
+++ b/lectures/lectures.html
@@ -16,8 +16,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	
-    <link href="../../css/bootstrap.css" rel="stylesheet"/>
-    <link href="../../css/ravaj.css" rel="stylesheet"/>
+    <link href="../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../css/ravaj.css" rel="stylesheet"/>
 
 </head>
 <body class="index">
