--- a/lectures/1st-lecture.html
+++ b/lectures/1st-lecture.html
@@ -14,12 +14,10 @@
 
     <script src="https://cdn.datacamp.com/datacamp-light-latest.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/aaa/assets/css/style.css?v=de65868e5d6a8010907d8f0aa653e21466b700a1">
-    <link rel="stylesheet" href="/style.css">
-
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet"/>
-    <link href="css/ravaj.css" rel="stylesheet"/>
+	
+    <link href="../css/bootstrap.css" rel="stylesheet"/>
+    <link href="../css/ravaj.css" rel="stylesheet"/>
 
 </head>
 <body class="index">
