--- a/lectures/2nd-lecture.html
+++ b/lectures/2nd-lecture.html
@@ -44,14 +44,16 @@
     </nav>
 
     <div class="container">
-        <div class="intro">
-            <h1 class="intro-text">Business Data Analytics</h1>
-            <a class="marketing-button intro-call-to-action"
-               href="https://github.com/kasrakhosravi/bi-data-analytics">
-                Github Source
-            </a>
-        </div>
-    </div>
+    	<section class="main-content">
+		<div class="intro">
+		    <h1 class="intro-text">Business Data Analytics</h1>
+		    <a class="marketing-button intro-call-to-action"
+		       href="https://github.com/kasrakhosravi/bi-data-analytics">
+			Github Source
+		    </a>
+		</div>
+	    </div>
+    	</sectio>
 
 </div>
 
