--- a/lectures/2nd-lecture.html
+++ b/lectures/2nd-lecture.html
@@ -44,22 +44,21 @@
     </nav>
 
     <div class="container">
-    	<section class="main-content">
-		<div class="intro">
-		    <h1 class="intro-text">Business Data Analytics</h1>
-		    <a class="marketing-button intro-call-to-action"
-		       href="https://github.com/kasrakhosravi/bi-data-analytics">
-			Github Source
-		    </a>
-		</div>
-	    </div>
-    	</sectio>
-
+	<div class="intro">
+	    <h1 class="intro-text">Business Data Analytics</h1>
+	    <a class="marketing-button intro-call-to-action"
+	       href="https://github.com/kasrakhosravi/bi-data-analytics">
+		Github Source
+	    </a>
+	</div>
+	</div>
 </div>
 
 <div class="main">
 
     <div class="container">
+        
+	  <section>
 
         <h4 id="welcome-to-github-pages">Second Lecture</h4>
 
