--- a/lectures/1st-lecture.html
+++ b/lectures/1st-lecture.html
@@ -31,13 +31,13 @@
                     <a href="https://kasrakhosravi.github.io/bi-data-analytics">Home</a>
                 </li>
                 <li>
-                    <a href="#">Lectures</a>
+                    <a href="lectures">Lectures</a>
                 </li>
                 <li>
-                    <a href="#">Labs</a>
+                    <a href="labs">Labs</a>
                 </li>
                 <li>
-                    <a href="#">Groups</a>
+                    <a href="groups">Groups</a>
                 </li>
             </ul>
         </div>
