--- a/labs/labs.html
+++ b/labs/labs.html
@@ -31,13 +31,13 @@
                     <a href="https://kasrakhosravi.github.io/bi-data-analytics">Home</a>
                 </li>
                 <li>
-                    <a href="lectures">Lectures</a>
+                    <a href="lectures/lectures.html">Lectures</a>
                 </li>
                 <li>
-                    <a href="labs">Labs</a>
+                    <a href="labs/labs.html">Labs</a>
                 </li>
                 <li>
-                    <a href="groups">Groups</a>
+                    <a href="groups/groups.html">Groups</a>
                 </li>
             </ul>
         </div>
